add a key pressing detecting and sending system

--- a/backend/templates/backend/index.html
+++ b/backend/templates/backend/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <h1>Xx_DarkPong_xX</h1>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
+    <textarea id="logs" cols="100" rows="30" disabled></textarea>
+    <h3>Press and hold q/a</h3>
 </body>
 </html>
