--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xx_DarkPong_xX</title>
-    <script type="module" src="{% static "backend/game.js" %}"></script>
+    <script type="module" src="{% static "app/game.js" %}"></script>
 </head>
 <body>
     <h1>Xx_DarkPong_xX</h1>
