--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,11 +6,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xx_DarkPong_xX</title>
+    <link rel="stylesheet" href="{% static "app/game.css" %}">
     <script type="module" src="{% static "app/game.js" %}"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 </head>
-<body>
-    <h1>Xx_DarkPong_xX</h1>
-    <textarea id="logs" cols="100" rows="30" disabled></textarea>
-    <h3>Press and hold q/a</h3>
+<body class="container">
+    <main class="row align-items-center vh-100">
+        <ul class="col-3 list-group">
+            <li class="list-group-item list-group-item-danger">Élie</li>
+            <li class="list-group-item list-group-item-success">Markus <span class="fst-italic text-danger-emphasis">(next)</span></li>
+            <li class="list-group-item list-group-item-success">Noel</li>
+            <li class="list-group-item list-group-item-success">Mark <span class="fst-italic text-danger-emphasis">(next)</span></li>
+            <li class="list-group-item list-group-item-danger">Huong</li>
+            <li class="list-group-item list-group-item-success">Jordan</li>
+            <li class="list-group-item list-group-item-danger">Emma</li>
+            <li class="list-group-item list-group-item-success">Clément</li>
+        </ul>
+        <div class="col-9 h-80 fs-4">
+            <div class="row ms-0 w-inherit">
+                <p class="col ps-0">Noel</p>
+                <p class="col pe-0 text-right">Mark</p>
+            </div>
+            <canvas class="w-inherit" id="canvas"></canvas>
+            <p class="w-inherit text-center">Play with <strong><code>Q</code></strong> and <strong><code>A</code></strong></p>
+        </div>
+    </main>
 </body>
 </html>
